[gd_scene load_steps=13 format=2]

[ext_resource path="res://reintentar_2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/pausa/Imagen de como se debe ver la pantalla de reintentar.jpg" type="Texture" id=2]
[ext_resource path="res://Audio/new/menu de muerte.mp3" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="reintentar_2" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ImagenDeComoSeDebeVerLaPantallaDeReintentar" type="Sprite" parent="."]
position = Vector2( 520.5, 307.375 )
scale = Vector2( 1.22471, 1.37611 )
texture = ExtResource( 2 )

[node name="reintentar" type="Button" parent="."]
margin_left = 490.0
margin_top = 68.0
margin_right = 824.0
margin_bottom = 148.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="inventario" type="Button" parent="."]
margin_left = 494.0
margin_top = 383.0
margin_right = 836.0
margin_bottom = 465.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="salir" type="Button" parent="."]
margin_left = 44.0
margin_top = 405.0
margin_right = 244.0
margin_bottom = 485.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
stream_paused = true

[connection signal="pressed" from="reintentar" to="." method="_on_reintentar_pressed"]
[connection signal="pressed" from="inventario" to="." method="_on_inventario_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
